--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  text-align: left;
+  margin: 20px;
 }
 
 .App-logo {
@@ -12,8 +13,8 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  justify-content: right;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -29,4 +30,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.ItemInputForm {
+  color: blue;
 }
