add some styling to app.css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,3 +43,14 @@
   padding-left: 10px;
   height: 25px;
 }
+
+.container {
+  background-color: #ffffcc;
+  padding-left: 20px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.ItemInputForm {
+  width: 200px;
+}
