fix padding in app

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  display: flex;
   text-align: center;
   margin: 20px;
   align-items: center;
@@ -42,20 +43,19 @@
 }
 
 .navbar {
-  background-color: gray;
-  
+  background-color: #ffffcc;
 
+  width: auto;
   height: 25px;
 }
 
 #container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  align-items: center;
   background-color: #ffffcc;
-  padding-left: 20px;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding: 20px;
+
 }
 
 
